--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 # Package Files #
 
 *.war
+*.jar
 *.ear
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
